source/carehub/main/default/objects/Question__c/fields/Choices__c.field-meta.xml
<CustomField>
    <fullName>Choices__c</fullName>
    <label>Choices</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>