source/carehub/main/default/objects/Question__c/fields/JSON__c.field-meta.xml
<CustomField>
    <fullName>JSON__c</fullName>
    <label>JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>