source/carehub/main/default/objects/Question__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <label>Question Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>